refactor : 테스트 코드 중복제거 및 MovementCommander 변경
Cars는 많은 차량을 이동테스트하는 것이 목적이기때문에 여러커맨드가 작동하는지에 대한 테스트를 작성하기 위해 MovementCommander 변경